<resources>
    <string name="app_name">Calendo</string>
    <string name="app_subtext">Organize your life with us</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_support">Support</string>
    <string name="profile_icon_caption">Profile Icon</string>
    <string name="nameSurname">John Doe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar_icon">Calendar</string>
    <string name="to_do_list_icon">To do list</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_pw">Repeat Password</string>
    <string name="noaccount">Don\'t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="welcome_text">Welcome Back!</string>
    <string name="create_account">Start Using Calendo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_account">Login to Calendo</string>
    <string name="my_account">My Account</string>
    <string name="add_title">Add Title</string>
    <string name="choose_category">Choose Category</string>
    <string name="set_date">Set Schedule</string>
    <string name="pick_date">Pick a Date</string>
    <string name="add_notes">Add Notes</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_category">Change Category</string>
    <string name="edit_set_date">Change Schedule</string>
    <string name="edit_pick_date">Edit the Date</string>
    <string name="edit_notes">Edit Notes</string>


</resources>
