<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:baselineAligned="false"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/login_account"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/drawable_bg_edit"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/drawable_bg_edit"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp" />

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="end"
        android:text="@string/forgot"
        android:textColor="@color/colorAccent" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/drawable_primary_btn"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:paddingRight="8dp"
            android:text="@string/noaccount" />

        <TextView
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_transparent"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:onClick="signUp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorSecondary" />
    </LinearLayout>



</LinearLayout>