<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:baselineAligned="false"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textSize="30sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/drawable_bg_edit"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/drawable_bg_edit"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp" />



                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/drawable_bg_edit"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp" />

                <EditText
                    android:id="@+id/pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/drawable_bg_edit"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp" />



                <EditText
                    android:id="@+id/r_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/drawable_bg_edit"
                    android:ems="10"
                    android:hint="@string/repeat_pw"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp" />




                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/drawable_secondary_btn"
                    android:onClick="validateSignup"
                    android:text="@string/signup"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>